# license-generator

./: CMakeLists.txt  licensegenerator.cpp  licensegenerator.h  main.cpp
